more code organization

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
-    SRCS "app_main.c"
+    SRCS "usb_hid_setup.c" "app_main.c"
     INCLUDE_DIRS "."
     PRIV_REQUIRES esp_driver_gpio MicroCanvas2D
     )
